Add GNN Dynamic Dataloader

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -61,39 +61,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from Funcs.MakeGraph import MakeGraph\n",
-    "\n",
-    "TEST = MakeGraph('/Users/andrewgarven/PycharmProjects/SubtypePlasticity/Data',\n",
-    "                  'TEST-dualstain',\n",
-    "                  ['Stain 1 Nucleus OD', 'Stain 2 Cytoplasm OD'],\n",
-    "                  30).graph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Graph' object has no attribute 'show'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[6], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mmatplotlib\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mpyplot\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mplt\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m \u001B[43mTEST\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshow\u001B[49m()\n",
-      "\u001B[0;31mAttributeError\u001B[0m: 'Graph' object has no attribute 'show'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'torch_geometric.loader.dataloader.DataLoader'>\n"
      ]
     }
    ],
-   "source": [],
+   "source": [
+    "from Funcs.DataLoader import NuclearSubtypeDataset\n",
+    "from torch_geometric.loader import DataLoader\n",
+    "\n",
+    "print(type(DataLoader(NuclearSubtypeDataset(root='/Users/andrewgarven/PycharmProjects/SubtypePlasticity/Data'),\n",
+    "                batch_size=2,\n",
+    "                shuffle=True)))"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
